--- a/style.css
+++ b/style.css
@@ -14,3 +14,16 @@ body{
 .box{
     display: flex;
 }
+
+.box eye{
+    position: relative;
+    width: 120px;
+    height: 120px;
+    display: block;
+    background: #fff;
+    margin: 0 20px;
+    border-radius: 50%;
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+                inset 0 0 15px #f2761e,
+                inset 0 0 25px #f2761e;
+}
